<resources>
    <string name="app_name">BeautyScannerAndroid</string>
    <string name="scanner">Skaner</string>
    <string name="categories">Kategorie</string>
    <string name="category">Kategoria</string>
    <string name="description">Opis</string>
    <string name="ingredients">Składniki</string>
    <string name="rating">Ocena</string>
    <string name="products">Produkty</string>
    <string name="product_details">Szczegóły produktu</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Ustawienia</string>
    <string name="missing_info">Brak informacji.\nPoinformuj nas o braku informacji, uzupełnimy je!</string>
    <string name="is_allergen">Składniki uczulające</string>
    <string name="is_irritant">Składniki drażniące</string>
    <string name="is_comedogenic">Składniki zatykające pory</string>
    <string name="is_carcinogenic">Składniki rakotwórcze</string>
    <string name="is_forbidden_during_pregnancy">Składniki zabronione w ciąży</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="change_user_details">Edytuj informacje</string>
    <string name="nick">Login</string>
    <string name="email">Email</string>
    <string name="change_user_password">Edytuj hasło</string>
    <string name="add_allergen">Dodaj alergen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_details">Moje konto</string>
    <string name="user_products">Moje produkty</string>
    <string name="user_allergens">Moje alergeny</string>
    <string name="user_info">Informacje o użytykowniku</string>
    <string name="welcome_stranger">Witaj, zaloguj się!</string>
    <string name="opening_date">Data otwarcia:</string>
    <string name="expiration_date">Termin przydatności:</string>
    <string name="name">Nazwa</string>
    <string name="save_user_details">Zapisz informacje</string>
    <string name="password">Hasło</string>
    <string name="enter_password">Wprowadź hasło</string>
    <string name="repeat_password">Powtórz hasło</string>
    <string name="save_allergen">Zapisz alergen</string>
    <string name="allergens">Składniki uczulające</string>
    <string name="show">Pokaż</string>
    <string name="hide">Ukryj</string>
    <string name="validation_match_password">Błąd! Oba hasła powinny być takie same</string>
    <string name="login">Zaloguj się</string>
    <string name="user_login">Wprowadź login</string>
    <string name="reset">Wyczyść dane</string>
    <string name="login_header">Logowanie</string>
    <string name="register">Załóż konto</string>
    <string name="register_header">Zarejestruj konto</string>
    <string name="enter_email">Wprowadź email</string>
    <string name="validation_nick_not_empty">Nick nie może być pusty</string>
    <string name="validation_email_not_empty">Email nie może być pusty</string>
    <string name="validation_email_not_correct">Email nie jest poprawny</string>
    <string name="validation_password_not_empty">Hasło nie może być puste</string>
    <string name="validation_password_match">Oba hasła powinny być takie same</string>
    <string name="logout">Wyloguj</string>
    <string name="welcome">"Witaj, "</string>
    <string name="back_main_screen">Powrót do EKRANU GŁÓWNEGO</string>
    <string name="no_product_info">Nie masz jeszcze żadnych ulubionych produktów</string>
    <string name="no_allergen_info">Nie masz jeszcze żadnych allergenów</string>
    <string name="add_product_to_fav">Dodaj produkt do ulubionych</string>
    <string name="producer">Producent</string>
    <string name="no_months">miesięcy</string>
    <string name="save">Zapisz</string>
    <string-array name="numbers_dropdown">
        <item>1</item>
        <item>3</item>
        <item>6</item>
        <item>12</item>
        <item>18</item>
        <item>24</item>
    </string-array>
</resources>