<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EditUserPasswordActivity">

    <TextView
        android:id="@+id/editPasswordLabel"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="150dp"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:hint="@string/enter_password"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/editPasswordLabel"
        app:layout_constraintStart_toEndOf="@id/editPasswordLabel"
        app:layout_constraintTop_toTopOf="@id/editPasswordLabel" />

    <TextView
        android:id="@+id/editPasswordLabel2"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="@id/editPasswordLabel"
        app:layout_constraintTop_toBottomOf="@id/editPasswordLabel" />

    <EditText
        android:id="@+id/editPassword2"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/repeat_password"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/editPasswordLabel2"
        app:layout_constraintStart_toStartOf="@id/editPassword"
        app:layout_constraintTop_toTopOf="@id/editPasswordLabel2" />

    <Button
        android:id="@+id/saveUserPasswordButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/save_user_details"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editPasswordLabel2" />

</androidx.constraintlayout.widget.ConstraintLayout>