<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserDetailsFragment">

    <TextView
        android:id="@+id/nickLabel"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="150dp"
        android:text="@string/nick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nick"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/nickLabel"
        app:layout_constraintStart_toEndOf="@id/nickLabel"
        app:layout_constraintTop_toTopOf="@id/nickLabel"
        tools:text="sdadsadadsdfe" />

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="@id/nickLabel"
        app:layout_constraintTop_toBottomOf="@id/nickLabel" />


    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/nick"
        app:layout_constraintTop_toTopOf="@id/emailLabel"
        app:layout_constraintBottom_toBottomOf="@id/emailLabel"
        tools:text="kjdahjkjdkjadkhakjdhjkhk" />

    <Button
        android:id="@+id/editUserInfoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/change_user_details"
        app:layout_constraintTop_toBottomOf="@id/emailLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/editUserPasswordButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_user_password"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/editUserInfoButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>