<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EditUserDetailsActivity">

    <TextView
        android:id="@+id/editNickLabel"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="150dp"
        android:text="@string/nick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editNick"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/editNickLabel"
        app:layout_constraintStart_toEndOf="@id/editNickLabel"
        app:layout_constraintTop_toTopOf="@id/editNickLabel"
        tools:text="sdadsadadsdfe" />

    <TextView
        android:id="@+id/editEmailLabel"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="@id/editNickLabel"
        app:layout_constraintTop_toBottomOf="@id/editNickLabel" />


    <EditText
        android:id="@+id/editEmail"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/editNick"
        app:layout_constraintTop_toTopOf="@id/editEmailLabel"
        app:layout_constraintBottom_toBottomOf="@id/editEmailLabel"
        tools:text="kjdahjkjdkjadkhakjdhjkhk" />

    <Button
        android:id="@+id/saveUserInfoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/save_user_details"
        app:layout_constraintTop_toBottomOf="@id/editEmailLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>