<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddProductToFavouritesActivity">

    <ImageView
        android:id="@+id/productImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars[0]" />

    <TextView
        android:id="@+id/productNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/productImage" />

    <TextView
        android:id="@+id/productName"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/productProducerLabel"
        app:layout_constraintTop_toBottomOf="@id/productImage"
        tools:text="kjdahjkjdkjadkhak fsdfs ds fdfsd fssdfsd sssssssssssssjdhjkhk" />

    <TextView
        android:id="@+id/productProducerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/producer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/productName" />

    <TextView
        android:id="@+id/productProducer"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/productProducerLabel"
        app:layout_constraintTop_toBottomOf="@id/productName"
        tools:text="kjdahjkjdkjadkhak fsdfs ds fdfsd fssdfsd sssssssssssssjdhjkhk" />

    <TextView
        android:id="@+id/productCategoryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/productProducer" />

    <TextView
        android:id="@+id/productCategory"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/productProducerLabel"
        app:layout_constraintTop_toBottomOf="@id/productProducer"
        tools:text="kjdahjkjdkjadkhak fsdfs ds fdfsd fssdfsd sssssssssssssjdhjkhk" />

    <TextView
        android:id="@+id/userProductOpeningDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/opening_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/productCategory" />
    tools:text="cokosfdfsfdd" />

<!--    <EditText-->
<!--        android:id="@+id/userProductOpeningDate"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginLeft="10dp"-->
<!--        android:textSize="15sp"-->
<!--        android:inputType="date"-->
<!--        android:hint="Enter Date"-->
<!--        app:layout_constraintBottom_toBottomOf="@id/userProductOpeningDateLabel"-->
<!--        app:layout_constraintStart_toEndOf="@id/userProductOpeningDateLabel"-->
<!--        app:layout_constraintTop_toTopOf="@id/userProductOpeningDateLabel"-->
<!--        tools:text="cokosfdfsfdd" />-->

    <Spinner
        android:id="@+id/openingDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textSize="10sp"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="@id/userProductOpeningDateLabel"
        app:layout_constraintStart_toEndOf="@id/userProductOpeningDateLabel"
        app:layout_constraintTop_toTopOf="@id/userProductOpeningDateLabel"/>

    <Spinner
    android:id="@+id/openingMonth"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="10sp"
    android:spinnerMode="dropdown"
    app:layout_constraintBottom_toBottomOf="@id/openingDay"
    app:layout_constraintStart_toEndOf="@id/openingDay"
    app:layout_constraintTop_toTopOf="@id/openingDay"/>

    <Spinner
        android:id="@+id/openingYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="@id/openingMonth"
        app:layout_constraintStart_toEndOf="@id/openingMonth"
        app:layout_constraintTop_toTopOf="@id/openingMonth" />


    <TextView
        android:id="@+id/userProductExpirationDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/expiration_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/openingMonth"/>

    <Spinner
        android:id="@+id/userProductExpirationMonths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textSize="15sp"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="@id/userProductExpirationDateLabel"
        app:layout_constraintStart_toEndOf="@id/userProductExpirationDateLabel"
        app:layout_constraintTop_toTopOf="@id/userProductExpirationDateLabel"
        tools:text="cokosfdfsfdd" />

    <TextView
        android:id="@+id/monthsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/no_months"
        app:layout_constraintBottom_toBottomOf="@id/userProductExpirationMonths"
        app:layout_constraintStart_toEndOf="@id/userProductExpirationMonths"
        app:layout_constraintTop_toTopOf="@id/userProductExpirationMonths"/>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginTop="500dp"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

</androidx.constraintlayout.widget.ConstraintLayout>